--- a/[WebSocket+Stomp] webSocketWithStomp/src/main/resources/static/index.html
+++ b/[WebSocket+Stomp] webSocketWithStomp/src/main/resources/static/index.html
@@ -144,16 +144,17 @@
 </head>
 <body>
     <div class="container">
-        <h1>🚀 WebSocket Test Hub</h1>
-        <p class="subtitle">Controller-Service-Repository 패턴으로 구현된 WebSocket 애플리케이션 테스트</p>
+        <h1>🚀 WebSocket Test Hub (STOMP)</h1>
+        <p class="subtitle">Controller-Service-Repository 패턴으로 구현된 STOMP WebSocket 애플리케이션 테스트</p>
         
         <div class="test-options">
             <a href="/websocket-test.html" class="test-card">
                 <h3>📱 단일 세션 테스트</h3>
-                <p>기본적인 WebSocket 연결과 메시지 송수신을 테스트합니다.</p>
+                <p>기본적인 STOMP WebSocket 연결과 메시지 송수신을 테스트합니다.</p>
                 <ul class="features">
-                    <li>WebSocket 연결/해제</li>
+                    <li>STOMP WebSocket 연결/해제</li>
                     <li>실시간 메시지 송수신</li>
+                    <li>토픽 기반 메시지 수신</li>
                     <li>REST API 테스트</li>
                     <li>브로드캐스트 메시지 수신</li>
                 </ul>
@@ -164,11 +165,11 @@
             
             <a href="/multi-session-test.html" class="test-card">
                 <h3>🔗 다중 세션 테스트</h3>
-                <p>여러 WebSocket 세션을 동시에 관리하고 브로드캐스트를 테스트합니다.</p>
+                <p>여러 STOMP WebSocket 세션을 동시에 관리하고 브로드캐스트를 테스트합니다.</p>
                 <ul class="features">
-                    <li>다중 세션 동시 관리</li>
+                    <li>다중 STOMP 세션 동시 관리</li>
                     <li>세션별 개별 메시지 전송</li>
-                    <li>브로드캐스트 메시지 테스트</li>
+                    <li>토픽 기반 브로드캐스트 메시지</li>
                     <li>실시간 세션 통계</li>
                 </ul>
                 <div style="margin-top: 20px;">
